--- a/RefitExemplo.API/RefitExemplo.API/RefitExemplo.API.csproj
+++ b/RefitExemplo.API/RefitExemplo.API/RefitExemplo.API.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Refit" Version="6.3.2" />
+    <PackageReference Include="Refit.HttpClientFactory" Version="6.3.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
